--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+# Files & Directories created acyomatically by OSX Filesystem
+.DS_Store
+**/.DS_Store/
